# src/main/webapp/docs/res/swagger.json
@@ -15,22 +15,6 @@
         "text/plain"
     ],
     "paths": {
-        "/manifest": {
-            "get": {
-                "description": "This endpoint returns the agreement module manifest.\n",
-                "tags": [
-                    "Manifest"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The agreement module manifest in JSON format",
-                        "schema": {
-                            "$ref": "#/definitions/ModuleManifest"
-                        }
-                    }
-                }
-            }
-        },
         "/version": {
             "get": {
                 "description": "This endpoint returns the agreement module version.\n",
@@ -56,6 +40,22 @@
                 "responses": {
                     "200": {
                         "description": "Help content of the agreement module in JSON format."
+                    }
+                }
+            }
+        },
+        "/api/v2": {
+            "get": {
+                "description": "This endpoint returns the agreement module manifest.\n",
+                "tags": [
+                    "Manifest"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The agreement module manifest in JSON format",
+                        "schema": {
+                            "$ref": "#/definitions/ModuleManifest"
+                        }
                     }
                 }
             }
@@ -612,7 +612,10 @@
                     "description": "Type of the operation. Can be \"simple\", \"requireFile\" or \"createFile\""
                 },
                 "config": {
-                    "$ref": "#/definitions/Config"
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -707,20 +710,6 @@
                     "type": "string"
                 },
                 "content": {
-                    "type": "string"
-                }
-            }
-        },
-        "Config": {
-            "type": "object",
-            "properties": {
-                "modalTitle": {
-                    "type": "string"
-                },
-                "modalDescription": {
-                    "type": "string"
-                },
-                "filter": {
                     "type": "string"
                 }
             }
